--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -9,14 +9,13 @@ provides:
 - ${NAME}
 maintainer: "Andrea Funtò <dihedron.dev@gmail.com>"
 description: |
-  FastBank is a simple test application to 
-  experiment with fast transaction processing 
-  across a distributed cluster of nodes with 
-  persistent, transactional local storage.
-  The objective is to benchmark how fast one
-  such processor can work while maintaining
-  strong consistency guarantees using simple
-  out of the box technologies.
+  Overlay is a simple command line tool (CLI)
+  to write text in arbitrary TTF fonts onto 
+  existing images; it supports several image 
+  formats (GIT, PNG, JPEG) both as input and 
+  output and can be used as a filter in a shell 
+  pipe, even cascading multiple edits in one 
+  long command.
 vendor: "Andrea Funtò"
 homepage: "https://github.com/dihedron"
 license: "MIT"
@@ -24,10 +23,7 @@ contents:
 - src: ./dist/${PLATFORM}/${NAME}
   dst: /usr/local/bin/${NAME}
   expand: true
-#- src: ./${NAME}.conf
-#  dst: /etc/${NAME}.conf
-#  expand: true
-#scripts:
-#  postinstall: ./postinstall.sh  
+scripts:
+  postinstall: ./postinstall.sh  
 rpm:
   packager: "Andrea Funtò <dihedron.dev@gmail.com>"
